fix(context): scope OTEL ThreadContext storage to the carrier thread (PROF-15271)
The ThreadContext DirectByteBuffer is a window into the OTEP record embedded in
the *carrier's* native ProfiledThread — the record the (carrier-bound) sampler
reads. It was cached in a plain ThreadLocal, keying it by the *virtual* thread
and pinning it to whichever carrier was mounted at first use. That is wrong once
the vthread migrates (writes land on the old carrier, so a sampler on the new
carrier sees stale/empty context) and unsafe once the old carrier's OS thread
exits: the record is freed while the buffer keeps being written — a use-after-free
that can corrupt JVM-owned native memory (observed as a crash in
ThreadsSMRSupport::free_list).

Introduce a context-storage mode. In CARRIER mode, storage is backed by
jdk.internal.misc.CarrierThreadLocal (JDK 21+), whose get()/set()/remove()
operate on the current carrier's map even from a mounted virtual thread, so a
vthread always resolves to its current carrier's live record. Storage lifetime
then matches the native record's lifetime, eliminating the dangling-buffer window.

- OtelContextStorage: factory + Mode enum + kill-switch. The internal type is
  built reflectively and held as its ThreadLocal supertype, so calls dispatch
  virtually with no per-call reflection and no compile-time dependency (the lib
  is a Java 8 baseline). Degrades to a plain ThreadLocal — today's behavior —
  when the type is missing (older JDK) or inaccessible (export not granted),
  never failing hard. Selected via -Dddprof.context.storage.mode=auto|carrier|thread.
- JavaProfiler: field uses the factory; a currentContext() get-or-init helper
  replaces ThreadLocal.withInitial (a reflectively-built CarrierThreadLocal cannot
  carry a supplier); the 8 context write sites route through it; contextStorageMode()
  added for diagnostics/tests.
- Build: add --add-exports java.base/jdk.internal.misc=ALL-UNNAMED to the test JVM,
  gated on testJvmMajorVersion() >= 